--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szabina's Personal Site</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <table cellspacing="20px">
@@ -45,7 +46,7 @@
             <tr>
                 <td>2020-</td>
                 <td>AmRest</td>
-                <td>Starbucks barista as a full-time eployee</td>
+                <td>Starbucks barista as a full-time employee</td>
             </tr>
         </tbody>
     </table>
